# Linux_study

drv_1_cmake/: CMakeLists.txt  toolchain.cmake
drv_1_cmake/src/: hello_drv.c
drv_2/: .Module.symvers.cmd  .hello_drv.ko.cmd  .hello_drv.mod.cmd  .hello_drv.mod.o.cmd  .hello_drv.o.cmd  .modules.order.cmd  Makefile  hello_drv.ko  hello_drv.mod  hello_drv_test  hello_drv_test.c  modules.order
led_drv/: .Module.symvers.cmd  .led_drv.ko.cmd  .led_drv.mod.cmd  .modules.order.cmd  Makefile  led_drv.c  led_drv.ko  led_drv.mod  led_drv_test  modules.order
led_dts_drv/: .Module.symvers.cmd  .led_drv.mod.o.cmd  .led_drv.o.cmd  .led_dts_drv.ko.cmd  .led_dts_drv.mod.cmd  .led_dts_drv.mod.o.cmd  .led_dts_drv.o.cmd  .modules.order.cmd  Makefile  led_dts_drv.c  led_dts_drv.ko  led_dts_drv.mod  led_dts_drv_test  led_dts_drv_test.c  modules.order
led_platform/: .Module.symvers.cmd  .led_platform.ko.cmd  .led_platform.mod.cmd  .led_platform.mod.o.cmd  .led_platform.o.cmd  .modules.order.cmd  Makefile  led_platform.c  led_platform.ko  led_platform.mod  led_platform_test  modules.order
mpu6050_drv/: .Module.symvers.cmd  .modules.order.cmd  .mpu6050_drv.ko.cmd  .mpu6050_drv.mod.cmd  .mpu6050_drv.mod.o.cmd  .mpu6050_drv.o.cmd  Makefile  modules.order  mpu6050_drv.c  mpu6050_drv.h  mpu6050_drv.ko  mpu6050_test  mpu6050_test.c
